--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mobile-chat",
   "version": "1.0.0",
   "description": "A Mobile Chat Application",
-  "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec node --no-warnings=ExperimentalWarning --loader ts-node/esm backend/src/index.ts"
+    "dev": "nodemon --watch backend/src --exec tsx backend/src/index.ts",
+    "build": "tsc && npm install && prisma generate --schema=./backend/prisma/schema.prisma && npm install --prefix frontend && npm run build --prefix frontend",
+    "start": "node backend/dist/src/index.js"
   },
   "type": "module",
   "keywords": [
@@ -14,15 +15,22 @@
   "author": "Obi Anthony",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
-    "nodemon": "^3.1.9",
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/node": "^22.13.4",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.3.1"
   }
 }
